@@ -1,3 +1,11 @@
+2003-11-14  Werner Koch  <wk@gnupg.org>
+
+	* cms.c (write_encrypted_cont): Fixed test on EOF.
+	* cert.c (ksba_cert_is_ca, ksba_cert_get_cert_policies) 
+	(ksba_cert_get_auth_key_id): Ditto.
+	* ber-decoder.c (_ksba_ber_decoder_dump) 
+	(_ksba_ber_decoder_decode): Ditto.
+
 2003-11-13  Werner Koch  <wk@gnupg.org>
 
 	* ber-decoder.c (eof_or_error): Replaced READ_ERROR with a system
